---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2022-02-01
  Changes:
      - Balance: Increased acid resistance for creep miners. Increased recipe cost of electric creep miner. Reduced corrosion DoT. Doubled creep type-1 pollution absorption.
      - Balance: Reduced Rampant Arsenal repair capsule biomass ingredient cost 3->2 (4->3 expensive mode).
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2022-01-28
  Changes:
      - Balance. 240% emissions multiplier for bio residue.
      - Balance. Increased acid resistance for creep miners.
      - Balance. Reduced biters science pack cost from 8 to 7 biomass and increased creep type-1 generation for low evolution (early game), because Rampant 2.2.0 changed enemy buildings density.
      - Fixed crash on new game.
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2022-01-25
  Changes:
      - Loading fresh game save crash issue fix (occasionally added with old gamesaves support).
      - Residue bio processing recipe balance fix.
      - Electric burner energy consumption reduced.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2022-01-24
  Changes:
      - Reduced burner creep miner energy consumption by 20% to make 1 residue item energy enough for one remove creep iteration.
      - Burner creep miner will gather all collected residue (if any!) in current iteration into its fuel slots when no fuel is left and nowhere to take.
      - Fixed issue: Burner creep miner searched for fuel too often when it is already out of energy. Now will do it only once per 20 seconds.
      - Balance. Halved pollution created by creep excavation. Slightly increased burner creep miner building recipe cost.